<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnduran.p3calculadora.MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/orangered"
            android:textSize="40dp"
            android:id="@+id/tResultado"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/siete"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bSiete"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="25dp"
            android:onClick="fSiete"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ocho"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bOcho"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fOcho"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/nueve"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bNueve"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fNueve"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/mas"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bMas"
            android:layout_marginRight="5dp"
            android:textSize="30dp"
            android:onClick="fMas"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cuatro"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bCuatro"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="25dp"
            android:onClick="fCuatro"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cinco"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bCinco"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fCinco"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/seis"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bSeis"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fSeis"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/menos"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bMenos"
            android:layout_marginRight="5dp"
            android:textSize="30dp"
            android:onClick="fMenos"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/uno"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bUno"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="25dp"
            android:onClick="fUno"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dos"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bDos"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fDos"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/tres"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bTres"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fTres"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/por"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bPor"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fPor"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/punto"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bPunto"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="25dp"
            android:onClick="fPunto"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cero"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bCero"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fCero"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bClear"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fCE"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/division"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bDivision"
            android:layout_marginRight="5dp"
            android:textSize="25dp"
            android:onClick="fDivision"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/igual"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/bIgual"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="40dp"
            android:onClick="fResultado"

            />

    </LinearLayout>

</LinearLayout>
